force-app/main/default/objects/FoxRoach_Sync_Log__c/FoxRoach_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>This Object is used to capture the Summary of the Records Synced from FoxRoach to Salesforce.</description>
    <label>FoxRoach Sync Log</label>
    <nameField>
        <label>FoxRoach Sync Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FoxRoach Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>