force-app/main/default/objects/FoxRoach_Sync_Log__c/fields/Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Count__c</fullName>
    <label>Account Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>