force-app/main/default/objects/FoxRoach_Sync_Log__c/fields/Office_Failed_Count__c.field-meta.xml
<CustomField>
    <fullName>Office_Failed_Count__c</fullName>
    <label>Office Failed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>