force-app/main/default/objects/FoxRoach_Sync_Log__c/fields/Subscription_Sync_Count__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Sync_Count__c</fullName>
    <label>Subscription Sync Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>