force-app/main/default/objects/FoxRoach_Sync_Log__c/fields/Subscriptions_New__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_New__c</fullName>
    <label>Subscriptions New</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>