force-app/main/default/objects/FoxRoach_Sync_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Office_Count__c</columns>
    <columns>Office_Sync_Count__c</columns>
    <columns>Account_Count__c</columns>
    <columns>Contact_Sync_Count__c</columns>
    <columns>Subscription_Sync_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Subscriptions_New__c</columns>
    <columns>Subscriptions_Failed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>